--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 h1 {
-    background-color:#8a2be280;
+    background-color:#500073;
+    color: white;
+    font-style: italic;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 40px;
+}
+
+.recipe-names {
+    font-size: large;
+}
+
+.heading {
+    color: red;
 }
